--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -48,6 +48,7 @@
   --text-white-color: #ffffff;
 
   //--bg-color
+  --bg-main-color: #fff;
   --bg-form-color: #f2f2f2;
   --bg-footer-color: #3053b5;
   --bg-header-active-color: rgba(50, 73, 97, 0.72);
